--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 body {
-    background-color: #3CB371;
+    background-color: #228B22;
 }
-h1 {color:#FFFFFF; background-color: #3CB371; }
+h1 {color:#FFFFFF; background-color: #228B22; }
