--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
 body {
-    background-color: #228B22;
+    background-color: #FF4500;
 }
-h1 {color:#FFFFFF; background-color: #228B22; }
+h1 {color:#FFFFFF; background-color:#FF4500; }
