--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
    color:#FFFFFF;
-    background-color:#000000;
+    background-color:black;
 }
-h1 {color:#FFFFFF; background-color:#000000} 
+h1 {color:#FFFFFF; background-color: black;} 
