--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,4 @@ body {
    color:#FFFFFF;
     background-color:black;
 }
-h1 {color:#FFFFFF; background-color: black;} 
+h1 {color:#FFFFFF; background-color: black} 
