--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
     color:#FFFFFF; 
-     background-color:#A9A9A9;
+     background-color:grey;
  }
- h1 {color:#FFFFFF; background-color: #A9A9A9;} 
+ h1 {color:#FFFFFF; background-color:grey;} 
