--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    color:black; 
+    color:#FFFFFF;
      background-color:black;
  }
  h1 {color:#FFFFFF; background-color:black;} 
- h2 {color:#FFFFFF}
+ h2 {color:#FFFFFF;}
