--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@ body {
      background-color:black;
  }
  h1 {color:#FFFFFF; background-color:black;} 
- h2 {color:black;}
+ h2 {color:white;}
  a {color:white;}
