--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
     color:white;
      background-color:black;
+     font-family:Verdana, Geneva, Tahoma, sans-serif;
  }
- h1 {color:#FFFFFF; background-color:white;} 
+ h1 {color:#FFFFFF; background-color:white; font-family:'Courier New', Courier, monospace;} 
 
  
